# TerreateIO

./: CMakeLists.txt  README.md  compile_flags.txt
impls/: CMakeLists.txt  IOController.cpp  buffer.cpp  composer.cpp  gltf.cpp  iobase.cpp  json.cpp  parser.cpp  scene.cpp  stringBuffer.cpp
impls/container/: animation.cpp  material.cpp  mesh.cpp  skeleton.cpp
impls/formats/: base.cpp  buffer.cpp  gltf.cpp  json.cpp
impls/importer/: gltf.cpp
impls/io/: gltf.cpp  interface.cpp  json.cpp
impls/model/: animation.cpp  material.cpp  mesh.cpp  skeleton.cpp
includes/: IOController.hpp  TeerreateIO.hpp  TerreateIO.hpp  buffer.hpp  composer.hpp  defines.hpp  exceptions.hpp  gltf.hpp  interface.hpp  iobase.hpp  json.hpp  parser.hpp  scene.hpp  stringBuffer.hpp  xba.hpp
includes/container/: animation.hpp  camera.hpp  material.hpp  mesh.hpp  scene.hpp  skeleton.hpp
includes/formats/: base.hpp  buffer.hpp  gltf.hpp  json.hpp
includes/importer/: gltf.hpp  interface.hpp
includes/io/: gltf.hpp  interface.hpp  json.hpp
includes/io/constants/: gltf.hpp  json.hpp
includes/model/: animation.hpp  camera.hpp  material.hpp  mesh.hpp  skeleton.hpp
scripts/: run.sh
tests/: CMakeLists.txt  TIOTest  TIOTest.cpp
tests/impls/: CMakeLists.txt  TIOTest.cpp
tests/resources/: test.json  testFrag.glsl  testVert.glsl
